--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <div class="container mt-5">
         <div class="row">
             <div class="col-md-4" id="hum">
-                    <div class="card-counter success">
+                    <div class="card-counter success header-content-left">
                             <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
                             width="60" height="60"
                             viewBox="0 0 172 172"
@@ -85,7 +85,7 @@
                     </div>
             </div> 
             <div class="col-md-4" id="gas">
-                    <div class="card-counter danger">
+                    <div class="card-counter danger header-content-center">
                             <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
                             width="50" height="50"
                             viewBox="0 0 172 172"
@@ -95,7 +95,7 @@
                     </div>
             </div>
             <div class="col-md-4" id="ph">
-                    <div class="card-counter primary">
+                    <div class="card-counter primary header-content-right">
                             <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
                             width="50" height="50"
                             viewBox="0 0 172 172"
